--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
-  text-align: center;
+  margin: 0 auto;
+  width: 1280px;
+  display: grid;
+  grid-template-rows: 80px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 20px;
+  grid-template-areas:
+  "header header header"
+  "nav content content"
+;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
